--- a/.github/workflows/tagpr.yml
+++ b/.github/workflows/tagpr.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Check out source code
         uses: actions/checkout@v4
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+          cache: true
+
       - id: run-tagpr
         name: Run tagpr
         uses: Songmu/tagpr@v1
