--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Run lint
         uses: reviewdog/action-golangci-lint@v2
         with:
+          go_version_file: go.mod
           fail_on_error: true
           golangci_lint_flags: --timeout=5m
 
